WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
72865
[Qt] WebSocket close tests are failing
https://bugs.webkit.org/show_bug.cgi?id=72865
Summary
[Qt] WebSocket close tests are failing
Yuta Kitamura
Reported
2011-11-21 00:44:53 PST
The following five tests are failing: - http/tests/websocket/tests/hybi/close-before-open.html - http/tests/websocket/tests/hybi/close-code-and-reason.html - http/tests/websocket/tests/hybi/close.html - http/tests/websocket/tests/hybi/workers/close.html - http/tests/websocket/tests/hybi/workers/close-code-and-reason.html These tests are failing because SocketStreamHandleQt::platformClose() does not emit didCloseSocketStream() callback when it is called before the connection is established. I'm going to post a patch shortly.
Attachments
Patch
(3.78 KB, patch)
2011-11-21 00:59 PST
,
Yuta Kitamura
no flags
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Yuta Kitamura
Comment 1
2011-11-21 00:59:46 PST
Created
attachment 116048
[details]
Patch
Simon Hausmann
Comment 2
2011-11-21 01:24:25 PST
Comment on
attachment 116048
[details]
Patch Thanks!
WebKit Review Bot
Comment 3
2011-11-21 01:43:14 PST
Comment on
attachment 116048
[details]
Patch Clearing flags on attachment: 116048 Committed
r100891
: <
http://trac.webkit.org/changeset/100891
>
WebKit Review Bot
Comment 4
2011-11-21 01:43:18 PST
All reviewed patches have been landed. Closing bug.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug