[Qt] WebSocket close tests are failing https://bugs.webkit.org/show_bug.cgi?id=72865

Reviewed by Simon Hausmann.

Source/WebCore:

* platform/network/qt/SocketStreamHandleQt.cpp:
(WebCore::SocketStreamHandlePrivate::close):
Emit didCloseSocketStream() callback even before the connection is established.
Call m_socket->abort() to prevent "connected" signal from firing.

LayoutTests:

* platform/qt/Skipped:
Unskip five WebSocket tests. Remove "failing websocket tests" section,
as there are no tests in this section.


Canonical link: https://commits.webkit.org/89380@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@100891 268f45cc-cd09-0410-ab3c-d52691b4dbfc