Source/WebCore/platform/network/qt/SocketStreamHandleQt.cpp
@@ -106,6 +106,11 @@ int SocketStreamHandlePrivate::send(const char* data, int len)
 
 void SocketStreamHandlePrivate::close()
 {
+    if (m_streamHandle->m_state == SocketStreamHandleBase::Connecting) {
+        m_socket->abort();
+        m_streamHandle->client()->didCloseSocketStream(m_streamHandle);
+        return;
+    }
     if (m_socket && m_socket->state() == QAbstractSocket::ConnectedState)
         m_socket->close();
 }
